...
          style={styles.container}
          behavior={Platform.OS === 'ios' ? 'padding' : undefined}>
          <TextInput
            value={title}
            onChangeText={onChangeTitle}
            onLayout={(e) => setTitleHeight(e.nativeEvent.layout.height)}
            placeholder="Title"
            placeholderTextColor={theme.textSecondary}
            style={[
              styles.title,
              noFocusOutline,
              { color: theme.text, paddingTop: insets.top + Spacing.two },
            ]}
...
